UX/Minor: Fix funny model selection overflow issue

--- a/public/stylesheets/tortoise.css
+++ b/public/stylesheets/tortoise.css
@@ -15,6 +15,7 @@
   flex-direction: column;
   align-items: center;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  overflow: hidden;
 }
 
 .model-selection-bar {
